@@ -1,5 +1,6 @@
 Dec 15, 2008
 		- Modified HoldVarEvent to use AddAnalogValue instead of SetAnalogValue so that it does not override mouse movement, only adds to it.
+		- Fixed unlink/unbind to correctly check if the key is a link key.
 
 Nov 24, 2008
 		- Added 'joycaps' command which will display joystick capabilities, useful for binding non-xinput joysticks.
